--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,5 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
 api.security.token.secret=${JWT_SECRET:meusegredosecreto}
+
+spring.h2.console.enabled=true
